--- a/index.html
+++ b/index.html
@@ -1302,28 +1302,28 @@
             <div class="benefits-grid">
                 <div class="benefit-card fade-in">
                     <span class="benefit-icon">🎯</span>
-                    <h3>Truly Understands You</h3>
-                    <p>Tell Aaria your budget, lifestyle, and dreams. She remembers everything and finds properties that genuinely match your vision.</p>
+                    <h3>Clarity That Cuts Through Confusion.</h3>
+                    <p>Aaria breaks down legal terms, documents, circle rates, and pricing into simple, human explanations you can actually trust.</p>
                 </div>
                 <div class="benefit-card fade-in">
                     <span class="benefit-icon">🔍</span>
-                    <h3>Filters Out the Noise</h3>
-                    <p>No more scrolling through hundreds of irrelevant listings. Aaria shows you only properties that actually fit your requirements.</p>
+                    <h3>Every Risk Filtered</h3>
+                    <p>Disputes, fraud-prone plots, overpriced listings, ownership issues — Aaria blocks the danger so you only deal with what’s clean and safe.</p>
                 </div>
                 <div class="benefit-card fade-in">
                     <span class="benefit-icon">💰</span>
-                    <h3>Completely Free Forever</h3>
-                    <p>Zero consultation fees. No commissions from you. No surprises. Aaria is your trusted advisor at absolutely no cost.</p>
+                    <h3>Safe Deals, Confident Decisions.</h3>
+                    <p>Aaria shields you from traps, fake urgency, and bad actors — ensuring your journey to ownership is transparent, stress-free, and grounded in truth.</p>
                 </div>
                 <div class="benefit-card fade-in">
                     <span class="benefit-icon">⚡</span>
-                    <h3>Responds in Seconds</h3>
+                    <h3>24/7 Guidance With a Human Heart.</h3>
                     <p>Questions at 2 AM? Aaria is always awake. Get instant property details, market insights, and answers anytime, anywhere.</p>
                 </div>
                 <div class="benefit-card fade-in">
                     <span class="benefit-icon">🤝</span>
-                    <h3>Zero Pressure Zone</h3>
-                    <p>Unlike pushy agents, Aaria never rushes you. Take your time, ask questions, compare options. Buy when YOU'RE ready.</p>
+                    <h3>Zero Bias. Pure Protection.</h3>
+                    <p>Aaria does not sell, push, or promote any property. Every decision is guided only by what keeps you safe.</p>
                 </div>
                 <div class="benefit-card fade-in">
                     <span class="benefit-icon">📊</span>
@@ -1341,21 +1341,21 @@
                 How <span class="gradient-text">Aaria</span> Helps You
             </h2>
             <p class="section-subtitle fade-in">
-                Finding your perfect property is simpler than ordering food online
+                Keeping You Safe, Clear, and Confident in Every Move.
             </p>
             <div class="steps-container">
                 <div class="step-item fade-in">
                     <div class="step-number">1</div>
                     <div class="step-content">
-                        <h3>Tell Aaria What You Want</h3>
-                        <p>Share your budget, preferred locations, property type, size, and any special needs. Chat naturally — Aaria understands conversational language perfectly.</p>
+                        <h3>Share Your Story With Aaria</h3>
+                        <p>Share your journey, challenges and any special needs. — Aaria understands You, Guard You Solve it with you.</p>
                     </div>
                 </div>
                 <div class="step-item fade-in">
                     <div class="step-number">2</div>
                     <div class="step-content">
-                        <h3>Get Perfect Property Matches</h3>
-                        <p>Within minutes, Aaria analyzes thousands of listings and sends you only the best matches — complete with photos, pricing, location maps, and detailed info via WhatsApp.</p>
+                        <h3>Aaria Shields You at every Stages</h3>
+                        <p>Aaria prepares you for safe visits, warns you of red flags, and ensures you never fall for pressure tactics or hidden traps. Your confidence becomes unshakeable.</p>
                     </div>
                 </div>
                 <div class="step-item fade-in">
