--- a/index.html
+++ b/index.html
@@ -1368,8 +1368,8 @@
                 <div class="step-item fade-in">
                     <div class="step-number">4</div>
                     <div class="step-content">
-                        <h3>Visit & Close the Deal</h3>
-                        <p>Ready to see a property? Aaria arranges site visits with our expert team who guide you through negotiations, paperwork, and ensure a smooth, transparent purchase.</p>
+                        <h3>Aaria Verifies Any Plot You Choose</h3>
+                        <p>You bring the property. Aaria checks its history, documents, safety, legality, and future risk — giving you a clean, unbiased safety assessment.</p>
                     </div>
                 </div>
             </div>
