--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@
     <section class="section testimonials" id="testimonials">
         <div class="container">
             <h2 class="section-title fade-in">
-                Real Stories from <span class="gradient-text">Real Buyers</span>
+                Real Stories from <span class="gradient-text">Protected Buyers</span>
             </h2>
             <p class="section-subtitle fade-in">
                 Join 1000+ happy property owners who found their dream homes with Aaria
@@ -1396,14 +1396,14 @@
                         <span class="star">★</span>
                     </div>
                     <p class="testimonial-text">
-                        "I was tired of agents showing me overpriced plots. Aaria understood my ₹15L budget perfectly and found me a plot in a developing area. Best investment decision ever!"
+                        “I was tired of brokers pushing overpriced plots. Aaria explained the real circle rate, highlighted hidden risks, and helped me choose safely within my ₹15L budget. I finally felt in control.”
                     </p>
                     <div class="testimonial-author">
                         <div class="author-avatar">R</div>
                         <div class="author-info">
                             <h4>Rajesh Kumar</h4>
                             <p>Software Engineer, Kanpur</p>
-                            <span class="verified-badge">✓ Verified Buyer</span>
+                            <span class="verified-badge">✓ Verified Aaria-Guided Buyer</span>
                         </div>
                     </div>
                 </div>
@@ -1417,14 +1417,14 @@
                         <span class="star">★</span>
                     </div>
                     <p class="testimonial-text">
-                        "As an NRI, buying property in India was scary. Aaria sent me videos, documents, even virtual tours at midnight Dubai time. Made everything transparent and easy."
+                        “As an NRI, buying land in India felt risky. Aaria verified documents, shared clear videos, and guided me on every legal step — even late at night Dubai time. I felt protected throughout.”
                     </p>
                     <div class="testimonial-author">
                         <div class="author-avatar">P</div>
                         <div class="author-info">
                             <h4>Priya Sharma</h4>
                             <p>Marketing Manager, Dubai</p>
-                            <span class="verified-badge">✓ Verified Buyer</span>
+                            <span class="verified-badge">✓ Verified Aaria-Assisted Buyer</span>
                         </div>
                     </div>
                 </div>
@@ -1438,14 +1438,14 @@
                         <span class="star">★</span>
                     </div>
                     <p class="testimonial-text">
-                        "No fake urgency, no pressure tactics. Aaria gave me market data, price comparisons, and let me decide. Took 3 months to choose, and she was patient throughout!"
+                        “No pressure, no urgency tricks. Aaria gave me honest data, safety checks, and time to think. I took 3 months to decide — she stayed patient, protective, and unbiased the entire way.”
                     </p>
                     <div class="testimonial-author">
                         <div class="author-avatar">A</div>
                         <div class="author-info">
                             <h4>Amit Verma</h4>
                             <p>Business Owner, Lucknow</p>
-                            <span class="verified-badge">✓ Verified Buyer</span>
+                            <span class="verified-badge">✓ Verified Aaria-Guided Buyer</span>
                         </div>
                     </div>
                 </div>
