--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@
                 Real Stories from <span class="gradient-text">Protected Buyers</span>
             </h2>
             <p class="section-subtitle fade-in">
-                Join 1000+ happy property owners who found their dream homes with Aaria
+                Real People. Real Protection. Real Peace of Mind.
             </p>
             <div class="testimonial-grid">
                 <div class="testimonial-card fade-in">
