--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
                     <span>100% Free AI Property Consultation</span>
                 </div>
                 <h1>
-                    Find Your Perfect Property<br>
+                    Your Property Journey, Protected<br>
                     with <span class="hero-highlight">Aaria</span>
                 </h1>
                 <p class="hero-subtitle">Your Trusted Property Guardian. Every property verified. Every decision protected.
@@ -1233,10 +1233,10 @@
                 <div class="cta-group">
                     <a href="https://wa.me/919876543210?text=Hi%20Aaria%2C%20I%20want%20to%20find%20a%20property" 
                         class="btn btn-primary">
-                        💬 Chat with Aaria
+                        💬 Start Safe Guidance
                     </a>
                     <button class="btn btn-secondary" onclick="openAariaPopup()">
-                        📞 Let Aaria Call You
+                        📞 Request Guardian Call
                     </button>
 
                 </div>
@@ -1465,12 +1465,12 @@
                     <div class="cta-buttons">
                         <a href="https://wa.me/919876543210?text=Hi%20Aaria%2C%20I%20want%20to%20buy%20a%20property" 
                             class="cta-btn white-btn">
-                            💬 Start Free Consultation
+                            Start Safe Guidance
                         </a>
                         
                         <a href="tel:919876543210" 
                             class="cta-btn green-btn">
-                            📞 Call Aaria
+                            📞 Request Guardian Call
                         </a>
                     </div>
                 </div>
