--- a/index.html
+++ b/index.html
@@ -1465,7 +1465,7 @@
                     <div class="cta-buttons">
                         <a href="https://wa.me/919876543210?text=Hi%20Aaria%2C%20I%20want%20to%20buy%20a%20property" 
                             class="cta-btn white-btn">
-                            Start Safe Guidance
+                           💬 Start Safe Guidance
                         </a>
                         
                         <a href="tel:919876543210" 
