--- a/index.html
+++ b/index.html
@@ -1468,10 +1468,9 @@
                            💬 Start Safe Guidance
                         </a>
                         
-                        <a href="tel:919876543210" 
-                            class="cta-btn green-btn">
-                            📞 Request Guardian Call
-                        </a>
+                        <button class="btn btn-secondary" onclick="openAariaPopup()">
+                        📞 Request Guardian Call
+                    </button>
                     </div>
                 </div>
                 <div class="cta-features">
