--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
                     <span>100% Free AI Property Consultation</span>
                 </div>
                 <h1>
-                    Your Property Journey, Protected<br>
+                    Find Your Perfect Property<br>
                     with <span class="hero-highlight">Aaria</span>
                 </h1>
                 <p class="hero-subtitle">Your Trusted Property Guardian. Every property verified. Every decision protected.
@@ -1503,13 +1503,6 @@
                     <p class="footer-description">
                         Making property buying simple, transparent, and stress-free for every Indian family.
                     </p>
-                </div>
-                <div class="footer-section">
-                    <h4>For Buyers</h4>
-                    <a href="#why-aaria">Why Choose Aaria</a>
-                    <a href="#how-it-works">How Aaria Works</a>
-                    <a href="#testimonials">Success Stories</a>
-                    <a href="#get-started">Get Started Now</a>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
