--- a/index.html
+++ b/index.html
@@ -1498,26 +1498,19 @@
                 <div class="footer-brand">
                     <div class="nav-logo">
                         <img src="aarialogo.png" alt="AARIA Logo" class="logo-img">
-                    </div>
-                    <p class="footer-tagline">Your Trusted AI Property Consultant</p>
-                    <p class="footer-description">
-                        Making property buying simple, transparent, and stress-free for every Indian family.
-                    </p>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
+                        <div class="container">
+                            <h3>Aaria — Your Trusted Property Guardian</h3>
+                            <p>Kanpur, Uttar Pradesh</p>
+                            <p><a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
+                            <p>© 2025 Aaria Realty</p>
+                        </div>
+                        <div class="footer-section">
+                    <h4>Quick Access</h4>
                     <a href="./aariacalculator.html">ROI Calculator</a>
                     <a href="./investmentguide.html">Investment Guide</a>
                     <a href="./listing.html">Property Profile</a>                    
                     <a href="./faq.html">FAQs</a>
                 </div>
-                <div class="footer-section">
-                    <h4>Contact Us</h4>
-                    <a href="https://wa.me/+916386845350">WhatsApp Chat</a>
-                    <a href="tel:+910804780070">Call: +91 0804780070</a>
-                    <a href="#">4E/228 Awas Vikas naubasta Kanpur Nagar, Uttar Pradesh</a>
-                </div>
-            </div>
 </footer>
 
 
