--- a/index.html
+++ b/index.html
@@ -1498,12 +1498,16 @@
                 <div class="footer-brand">
                     <div class="nav-logo">
                         <img src="aarialogo.png" alt="AARIA Logo" class="logo-img">
-                        <div class="container">
-                            <h3>Aaria — Your Trusted Property Guardian</h3>
-                            <p>Kanpur, Uttar Pradesh</p>
-                            <p><a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
+                            </div>
+                    <p class="footer-tagline">Your Trusted Property Guardian</p>
+                    <p class="footer-description">
+                        Kanpur, Uttar Pradesh
+                    </p>
+                    <p><a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
                             <p>© 2025 Aaria Realty</p>
-                        </div>
+                </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
                         <div class="footer-section">
                     <h4>Quick Access</h4>
                     <a href="./aariacalculator.html">ROI Calculator</a>
