--- a/index.html
+++ b/index.html
@@ -1503,7 +1503,7 @@
                     <p class="footer-description">
                         Kanpur, Uttar Pradesh
                     </p>
-                    <p><a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
+                    <p><a href="./privacy.html">Privacy Policy</a> | <a href="./contact.html">Contact</a></p>
                             <p>© 2025 Aaria Realty</p>
                 </div>
                 <div class="footer-section">
