--- a/index.html
+++ b/index.html
@@ -746,13 +746,9 @@
 
         /* Footer */
         footer {
-            background: linear-gradient(135deg, #0C3C44, #1E6F5C);
-    color: #fff;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    padding: 100px 20px 120px;
-    text-align: center;
-    position: relative;
+            background: linear-gradient(135deg, #1E6F5C, #0C3C44);
+            color: #fff;
+            padding: max(50px, 9vh) 0 max(25px, 4vh);
         }
 
         .footer-grid {
