--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 
         /* Footer */
         footer {
-            background: linear-gradient(135deg, #1E6F5C, #0C3C44);
+            background: linear-gradient(135deg, #0C3C44, #1E6F5C);
             color: #fff;
             padding: max(50px, 9vh) 0 max(25px, 4vh);
         }
