--- a/index.html
+++ b/index.html
@@ -1631,27 +1631,37 @@ function toggleAariaMore() {
   const box = document.getElementById("aariaMore");
   box.classList.toggle("hidden");
 }
-
-/** FORM SUBMIT → GOOGLE SHEETS + TRIGGER CALL **/
+<script>
+/** FORM SUBMIT → GOOGLE SHEETS **/
 document.getElementById("aariaCallForm").addEventListener("submit", function(e) {
   e.preventDefault();
 
   const formData = new FormData(this);
+  const data = {};
 
-  fetch("https://script.google.com/macros/s/AKfycbxGPcvi8jZHPj8YWSwVDZ4t6lvUfaVtxbiamajjgbhlzFvkFZlsYVltr0oOPxtYWrb_/exec", {
+  formData.forEach((v, k) => {
+    data[k] = v;
+  });
+
+  fetch("https://script.google.com/macros/s/AKfycbwlzCB92DqKb787ILcP5JZUFzHuMvaTGfRmenhX4kq2AWsKOZW0NGCGFfqtK8RLM91fkw/exec", {
     method: "POST",
-    body: formData
+    mode: "no-cors",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify(data)
   })
   .then(() => {
     alert("Aaria will call you shortly.");
     closeAariaCallPopup();
   })
-  .catch(() => {
+  .catch((err) => {
+    console.error(err);
     alert("Something went wrong. Please try again.");
   });
 });
+</script>
 
-    </script>
 <!-- AARIA CALL POPUP -->
 <div id="aariaCallPopup" class="aaria-overlay">
   <div class="aaria-modal">
